setup register form

--- a/Japan_estate/Japan_estate/src/main/resources/static/css/standard.css
+++ b/Japan_estate/Japan_estate/src/main/resources/static/css/standard.css
@@ -5,6 +5,7 @@ body{
 *{
     font-family: 'Noto Sans Mono', sans-serif;
     text-decoration: none;
+    color: black;
     background-color: inherit;
     margin: 0;
     padding: 0;
