--- a/Japan_estate/Japan_estate/src/main/resources/templates/index.html
+++ b/Japan_estate/Japan_estate/src/main/resources/templates/index.html
@@ -34,7 +34,7 @@
         </div>
     </nav>
     <div class="right_header">
-
+        <a th:href="@{/login}" id="login_button">Login</a>
     </div>
 </div>
 
