--- a/Japan_estate/Japan_estate/src/main/resources/static/css/layout.css
+++ b/Japan_estate/Japan_estate/src/main/resources/static/css/layout.css
@@ -44,7 +44,6 @@
 .center_header{
     display: flex;
     flex: 1;
-    /*gap: 25px;*/
     justify-content: center;
     text-align: center;
     /*background-color: #e0f8e0;*/
@@ -57,6 +56,15 @@
     /*background-color: #e0f8e0;*/
 }
 
+#login_button{
+    padding: 15px;
+    font-weight: 500;
+    border-radius: 5px;
+    margin-right: 70px;
+    background-color: #e0f8e0;
+    box-shadow: 4px 4px 2px #c0f2c0;
+}
+
 .navbar_back{
     display: flex;
     justify-content: center;
@@ -67,7 +75,8 @@
     /*transition: .1s all;*/
 }
 
-.navbar_back:active{
+.navbar_back:active,
+#login_button:active{
     transform: scale(0.96);
     box-shadow: 2px 2px 1px #c0f2c0;
     transition: .1s all;
