register page html done

--- a/Japan_estate/Japan_estate/src/main/resources/templates/login.html
+++ b/Japan_estate/Japan_estate/src/main/resources/templates/login.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/css/standard.css">
     <link rel="stylesheet" href="/css/layout.css">
     <link rel="stylesheet" href="/css/login_register.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/layout/favicon.png">
     <title>Japan Estate - Login</title>
 </head>
 <body>
