--- a/Japan_estate/Japan_estate/src/main/resources/static/css/login_register.css
+++ b/Japan_estate/Japan_estate/src/main/resources/static/css/login_register.css
@@ -1,10 +1,25 @@
+option,
+select{
+    font-size: 18px;
+    font-weight: 500;
+}
+
+select,
+input{
+    background-color: #eafaea;
+}
+
+option{
+    background-color: #f4fdf4;
+}
+
 #login_register_flexbox{
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     gap: 20px;
-    margin-top: 100px;
+    margin-top: 50px;
 }
 
 #login_register_form{
@@ -13,12 +28,13 @@
     align-items: center;
     justify-content: center;
     padding: 20px;
-    gap: 35px;
+    gap: 25px;
     border-style: solid;
     border-radius: 10px;
     border-color: #c0f2c0;
     border-width: 2px;
     box-shadow: 4px 4px 2px #c0f2c0;
+    /*background-color: #CAEDDD;*/
 }
 
 #above_form_text{
@@ -39,18 +55,58 @@
     gap: 15px;
 }
 
-.register_login_input{
+.birthday_flexbox,
+.gender_flexbox{
+    width: inherit;
+}
+
+.form_label{
+    font-size: 12px;
+    margin-bottom: 4px;
+}
+
+.birthday_input_wrapper,
+.gender_input_wrapper{
+    display: flex;
+    width: inherit;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+}
+
+.gender_input{
+    display: flex;
+    flex-direction: row;
+    gap: 4px;
+    padding: 7px;
+    width: 108px;
+    justify-content: space-between;
+    border-radius: 5px;
+    border: 2px solid #aaeeaa;
+}
+
+select.register_login_input{
+    width: 125px;
+}
+
+.register_login_input,
+.email_password_input{
     padding: 7px;
     font-size: 17px;
     border-radius: 5px;
+    border: 2px solid #aaeeaa;
+    width: 180px;
+}
+
+.email_password_input{
+    width: 390px !important;
 }
 
 #submit_form_button{
     font-size: 14px;
     padding: 5px;
     border-style: solid;
-    border-width
-    : 2px;
+    border-width: 2px;
     border-color: #c0f2c0;
     background-color: #e0f8e0;
     box-shadow: 4px 4px 2px #c0f2c0;
