--- a/Japan_estate/Japan_estate/src/main/resources/static/css/login_register.css
+++ b/Japan_estate/Japan_estate/src/main/resources/static/css/login_register.css
@@ -123,3 +123,7 @@ select.register_login_input{
     box-shadow: 2px 2px 1px #c0f2c0;
     transition: .1s all;
 }
+
+.error_message{
+    color: red;
+}
