--- a/Japan_estate/Japan_estate/src/main/resources/templates/register.html
+++ b/Japan_estate/Japan_estate/src/main/resources/templates/register.html
@@ -20,19 +20,19 @@
 </div>
 <div id="login_register_flexbox">
     <p id="above_form_text">Create a new account</p>
-    <form id="login_register_form">
+    <form id="login_register_form" th:action="@{/register}" th:object="${user}" method="post">
         <div class="name_surname_form">
             <div class="input_div">
-                <input type="text" name="register_name" id="name" class="register_login_input" placeholder="Name">
+                <input type="text" th:field="*{name}" id="name" class="register_login_input" placeholder="Name" required>
             </div>
             <div class="input_div">
-                <input type="text" name="register_surname" class="register_login_input" id="surname" placeholder="Surname">
+                <input type="text" th:field="*{surname}" class="register_login_input" id="surname" placeholder="Surname" required>
             </div>
         </div>
         <div class="birthday_flexbox">
             <div class="form_label">Birth date</div>
             <div class="birthday_input_wrapper">
-                <select class="register_login_input" name="birthday_day" id="birthday_day">
+                <select class="register_login_input" name="bDay_day" required id="birthday_day">
                     <option value="1">1</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
@@ -65,7 +65,7 @@
                     <option value="30">30</option>
                     <option value="31">31</option>
                 </select>
-                <select class="register_login_input" name="birthday_month" id="birthday_month">
+                <select class="register_login_input" name="bDay_month" required id="birthday_month">
                     <option value="1">Jan</option>
                     <option value="2">Feb</option>
                     <option value="3">Mar</option>
@@ -79,7 +79,7 @@
                     <option value="11">Nov</option>
                     <option value="12">Dec</option>
                 </select>
-                <select class="register_login_input" name="birthday_year" id="birthday_year">
+                <select class="register_login_input" name="bDay_year" required id="birthday_year">
                 <option value="2026">2026</option>
                 <option value="2025">2025</option>
                 <option value="2024">2024</option>
@@ -214,26 +214,27 @@
             <div class="gender_input_wrapper">
                 <div class="gender_input">
                     <label for="gender_man">Man</label>
-                    <input type="radio" name="gender" value="man" id="gender_man">
+                    <input type="radio" th:field="*{gender}" value="man" id="gender_man">
                 </div>
                 <div class="gender_input">
                     <label for="gender_woman">Woman</label>
-                    <input type="radio" name="gender" value="woman" id="gender_woman">
+                    <input type="radio" th:field="*{gender}" value="woman" id="gender_woman">
                 </div>
                 <div class="gender_input">
                     <label for="gender_other">Other</label>
-                    <input type="radio" name="gender" value="other" id="gender_other">
+                    <input type="radio" th:field="*{gender}" value="other" id="gender_other">
                 </div>
             </div>
         </div>
         <div class="input_div">
-            <input type="email" name="register_email" class="email_password_input" id="email" placeholder="E-Mail">
+            <input type="email" th:field="*{email}" required class="email_password_input" id="email" placeholder="E-Mail">
         </div>
         <div class="input_div">
-            <input type="password" name="register_password" class="email_password_input" id="password" placeholder="Password">
+            <input type="password" th:field="*{password}" required class="email_password_input" id="password" placeholder="Password">
         </div>
         <button type="submit" id="submit_form_button">Register</button>
     </form>
+    <div th:if="${error}" class="error_message" th:text="${error}"></div>
 </div>
 </body>
 </html>
