--- a/Japan_estate/Japan_estate/src/main/resources/static/css/login_register.css
+++ b/Japan_estate/Japan_estate/src/main/resources/static/css/login_register.css
@@ -19,7 +19,7 @@ option{
     justify-content: center;
     flex-direction: column;
     gap: 20px;
-    margin-top: 50px;
+    margin-top: 25px;
 }
 
 #login_register_form{
@@ -102,9 +102,10 @@ select.register_login_input{
     width: 390px !important;
 }
 
-#submit_form_button{
-    font-size: 14px;
-    padding: 5px;
+#submit_form_button,
+#switch_login_register_button{
+    font-size: 17px;
+    padding: 4px 18px 6px 18px;
     border-style: solid;
     border-width: 2px;
     border-color: #c0f2c0;
@@ -113,15 +114,29 @@ select.register_login_input{
     border-radius: 10px
 }
 
-#submit_form_button:hover{
+#submit_form_button:hover,
+#switch_login_register_button:hover{
     background-color: #d5f6d5;
     cursor: pointer;
 }
 
-#submit_form_button:active{
+#submit_form_button:active,
+#switch_login_register_button:active{
     transform: scale(0.96);
     box-shadow: 2px 2px 1px #c0f2c0;
     transition: .1s all;
+}
+
+#switch_login_register_button{
+    font-size: 16px;
+    padding: 20px;
+}
+
+.switch_login_register_div{
+    display: flex;
+    gap: 7px;
+    flex-direction: column;
+    align-items: center;
 }
 
 .error_message{
