--- a/Japan_estate/Japan_estate/src/main/resources/templates/houseDetails.html
+++ b/Japan_estate/Japan_estate/src/main/resources/templates/houseDetails.html
@@ -46,5 +46,6 @@
     <p th:text="${'rooms: ' + houseDetails.rooms}"></p>
     <p th:text="${'size: ' + houseDetails.size + 'm^2'}"></p>
 </div>
+<div class="footer"></div>
 </body>
 </html>
