--- a/Japan_estate/Japan_estate/src/main/resources/static/css/home.css
+++ b/Japan_estate/Japan_estate/src/main/resources/static/css/home.css
@@ -62,6 +62,7 @@
     background-color: #e0f8e0;
     box-shadow: 4px 4px 2px #c0f2c0;
     border-radius: 8px;
+    border: solid 1px #c0f2c0;
     max-width: 155px;
 }
 
