--- a/Japan_estate/Japan_estate/src/main/resources/static/css/profile.css
+++ b/Japan_estate/Japan_estate/src/main/resources/static/css/profile.css
@@ -1,4 +1,4 @@
-.profile_layout{
+.profile_page_layout{
     display: flex;
     margin-top: 25px;
     flex-direction: row;
@@ -6,33 +6,85 @@
     gap: 20px;
 }
 
-.profile_settings,
+.your_account_section,
 .profile_info{
     display: flex;
-    column-gap: 10px;
+    flex-direction: column;
+    align-items: center;
+    height: 400px;
+    gap: 20px;
     background-color: #e0f8e0;
     box-shadow: 4px 4px 2px #c0f2c0;
     border: 2px solid #c0f2c0;
 }
 
-.profile_settings{
+.your_account_section{
     width: 300px;
-    height: 400px;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
     margin-left: 30px;
     border-radius: 5px;
 }
 
 .profile_info{
     width: 740px;
-    height: 400px;
-    flex-direction: column;
-    justify-content: flex-start;
     border-radius: 5px;
 }
 
-span{
-    margin: 5px;
+.section_title{
+    font-weight: 500;
+    font-size: 22px;
+    margin-top: 15px;
+}
+
+.section_option{
+    display: flex;
+    flex-direction: row;
+    max-width: 200px;
+    max-height: 30px;
+    width: 200px;
+    height: 30px;
+    align-items: center;
+    justify-content: flex-start;
+    padding: 10px;
+    gap: 10px;
+}
+
+.section_option:active,
+.section_option:hover{
+    border-radius: 5px;
+}
+
+.section_option:hover{
+    background-color: #c0f2c0;
+}
+
+.section_option:active{
+    background-color: #aaeeaa
+}
+
+.mdi--account-edit-outline {
+  display: inline-block;
+  width: 26px;
+  height: 26px;
+  --svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%23000' d='M2 17v3h8v-1.89H3.9V17c0-.64 3.13-2.1 6.1-2.1c.96.01 1.91.14 2.83.38l1.52-1.52c-1.4-.47-2.85-.73-4.35-.76c-2.67 0-8 1.33-8 4m8-13C7.79 4 6 5.79 6 8s1.79 4 4 4s4-1.79 4-4s-1.79-4-4-4m0 6c-1.1 0-2-.89-2-2s.9-2 2-2s2 .9 2 2s-.89 2-2 2m11.7 3.35l-1 1l-2.05-2l1-1a.55.55 0 0 1 .77 0l1.28 1.28c.21.21.21.56 0 .77M12 18.94l6.06-6.06l2.05 2l-6 6.07H12z'/%3E%3C/svg%3E");
+  background-color: currentColor;
+  -webkit-mask-image: var(--svg);
+  mask-image: var(--svg);
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  -webkit-mask-size: 100% 100%;
+  mask-size: 100% 100%;
+}
+
+.icon-park-outline--shopping {
+  display: inline-block;
+  width: 26px;
+  height: 26px;
+  --svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 48 48'%3E%3Cg fill='none'%3E%3Cpath d='M39 32H13L8 12h36z'/%3E%3Cpath stroke='%23000' stroke-linecap='round' stroke-linejoin='round' stroke-width='4' d='M3 6h3.5L8 12m0 0l5 20h26l5-20z'/%3E%3Ccircle cx='13' cy='39' r='3' stroke='%23000' stroke-linecap='round' stroke-linejoin='round' stroke-width='3'/%3E%3Ccircle cx='39' cy='39' r='3' stroke='%23000' stroke-linecap='round' stroke-linejoin='round' stroke-width='3'/%3E%3C/g%3E%3C/svg%3E");
+  background-color: currentColor;
+  -webkit-mask-image: var(--svg);
+  mask-image: var(--svg);
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  -webkit-mask-size: 100% 100%;
+  mask-size: 100% 100%;
 }
