--- a/Japan_estate/Japan_estate/src/main/resources/templates/index.html
+++ b/Japan_estate/Japan_estate/src/main/resources/templates/index.html
@@ -24,17 +24,17 @@
     </div>
     <nav class="center_header">
         <div class="navbar_back" style="border-top-left-radius: 10px; border-bottom-left-radius: 10px;">
-            <a th:href="@{/}" class="header_button">Lente</a>
+            <a th:href="@{/}" class="header_button">Lorem</a>
         </div>
-        <div class="navbar_back" style="border-left: solid; border-right: solid; border-width: 1px; border-color: #c0f2c0;">
-            <a th:href="@{/}" class="header_button">Prova</a>
+        <div class="navbar_back">
+            <a th:href="@{/}" class="header_button">Ipsum</a>
         </div>
         <div class="navbar_back" style="border-top-right-radius: 10px; border-bottom-right-radius: 10px;">
             <a th:href="@{/}" class="header_button">Lorem ipsum</a>
         </div>
     </nav>
     <div class="right_header">
-        <a th:if="${session.loggedUser == null}" th:href="@{/login}" class="profile_button">Login</a>
+        <a th:if="${session.loggedUser == null}" th:href="@{/login}" class="profile_button"><span class="line-md--login"></span>Login</a>
         <a th:if="${session.loggedUser != null}" th:href="@{/user/profile}" class="profile_button" style="padding: 10px"><span class="line-md--account"></span>Profile</a>
     </div>
 </div>
