user profile completed

--- a/Japan_estate/Japan_estate/src/main/resources/templates/register.html
+++ b/Japan_estate/Japan_estate/src/main/resources/templates/register.html
@@ -210,7 +210,7 @@
             </div>
         </div>
         <div class="gender_flexbox">
-            <div class="form_label">Gender</div>
+            <div class="form_label">Genre</div>
             <div class="gender_input_wrapper">
                 <div class="gender_input">
                     <label for="gender_man">Man</label>
