--- a/Japan_estate/Japan_estate/src/main/resources/static/css/profile.css
+++ b/Japan_estate/Japan_estate/src/main/resources/static/css/profile.css
@@ -7,11 +7,11 @@
 }
 
 .your_account_section,
-.profile_info{
+.profile_info_section{
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 400px;
+    height: 500px;
     gap: 20px;
     background-color: #e0f8e0;
     box-shadow: 4px 4px 2px #c0f2c0;
@@ -24,15 +24,33 @@
     border-radius: 5px;
 }
 
-.profile_info{
+.profile_info_section{
     width: 740px;
     border-radius: 5px;
+}
+
+.section_title_box{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    width: 100%;
 }
 
 .section_title{
     font-weight: 500;
     font-size: 22px;
     margin-top: 15px;
+}
+
+.info_box{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    width: 80%;
+    max-height: 72%;
+    gap: 27px;
+    overflow-y: scroll;
 }
 
 .section_option{
@@ -48,7 +66,7 @@
     gap: 10px;
 }
 
-.section_option:active,
+.section_option,
 .section_option:hover{
     border-radius: 5px;
 }
@@ -57,8 +75,91 @@
     background-color: #c0f2c0;
 }
 
-.section_option:active{
-    background-color: #aaeeaa
+.title_info_wrapper{
+    display: flex;
+    flex-direction: row;
+    gap: 8px;
+    font-size: 19px;
+}
+
+.title_of_info{
+    font-weight: 700;
+}
+
+.label_input_wrapper{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    max-width: 592px;
+    gap: 5px;
+}
+
+.multi_input_wrapper{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.multi_input,
+.email_input,
+.birthday_input,
+.gender_input{
+    padding: 7px;
+    margin: 0px 2px 0px 2px;
+    font-size: 17px;
+    border: 2px solid #aaeeaa;
+    border-radius: 5px;
+}
+
+.multi_input{
+    width: 230px;
+}
+
+.email_input{
+    width: 300px;
+}
+
+.birthday_input{
+    width: 135px;
+}
+
+.gender_input{
+    display: flex;
+    justify-content: space-between;
+    width: 117px;
+}
+
+.birthday_input_wrapper,
+.gender_input_wrapper{
+    display: flex;
+    width: inherit;
+    justify-content: space-between;
+}
+
+.submit_edit_profile_button{
+    font-size: 17px;
+    padding: 4px 18px 6px 18px;
+    border-style: solid;
+    border-width: 2px;
+    border-color: #aaeeaa;
+    background-color: #c0f2c0;
+    box-shadow: 4px 4px 2px #aaeeaa;
+    border-radius: 10px;
+    max-width: 140px;
+    align-self: center;
+    margin: 6px;
+}
+
+.submit_edit_profile_button:hover{
+     background-color: #d5f6d5;
+     cursor: pointer;
+ }
+
+.submit_edit_profile_button:active{
+    transform: scale(0.96);
+    box-shadow: 2px 2px 1px #c0f2c0;
+    transition: .1s all;
 }
 
 .mdi--account-edit-outline {
@@ -80,6 +181,34 @@
   width: 26px;
   height: 26px;
   --svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 48 48'%3E%3Cg fill='none'%3E%3Cpath d='M39 32H13L8 12h36z'/%3E%3Cpath stroke='%23000' stroke-linecap='round' stroke-linejoin='round' stroke-width='4' d='M3 6h3.5L8 12m0 0l5 20h26l5-20z'/%3E%3Ccircle cx='13' cy='39' r='3' stroke='%23000' stroke-linecap='round' stroke-linejoin='round' stroke-width='3'/%3E%3Ccircle cx='39' cy='39' r='3' stroke='%23000' stroke-linecap='round' stroke-linejoin='round' stroke-width='3'/%3E%3C/g%3E%3C/svg%3E");
+  background-color: currentColor;
+  -webkit-mask-image: var(--svg);
+  mask-image: var(--svg);
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  -webkit-mask-size: 100% 100%;
+  mask-size: 100% 100%;
+}
+
+.mdi--user-outline {
+  display: inline-block;
+  width: 26px;
+  height: 26px;
+  --svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%23000' d='M12 4a4 4 0 0 1 4 4a4 4 0 0 1-4 4a4 4 0 0 1-4-4a4 4 0 0 1 4-4m0 2a2 2 0 0 0-2 2a2 2 0 0 0 2 2a2 2 0 0 0 2-2a2 2 0 0 0-2-2m0 7c2.67 0 8 1.33 8 4v3H4v-3c0-2.67 5.33-4 8-4m0 1.9c-2.97 0-6.1 1.46-6.1 2.1v1.1h12.2V17c0-.64-3.13-2.1-6.1-2.1'/%3E%3C/svg%3E");
+  background-color: currentColor;
+  -webkit-mask-image: var(--svg);
+  mask-image: var(--svg);
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  -webkit-mask-size: 100% 100%;
+  mask-size: 100% 100%;
+}
+
+.material-symbols--orders-outline-rounded {
+  display: inline-block;
+  width: 26px;
+  height: 26px;
+  --svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%23000' d='M4 18V7.1L2.45 3.75q-.175-.375-.025-.763t.525-.562t.763-.037t.562.512L6.2 7.05h11.6l1.925-4.15q.175-.375.563-.525t.762.05q.375.175.525.563t-.025.762L20 7.1V18q0 .825-.587 1.413T18 20H6q-.825 0-1.412-.587T4 18m6-5h4q.425 0 .713-.288T15 12t-.288-.712T14 11h-4q-.425 0-.712.288T9 12t.288.713T10 13m-4 5h12V9.05H6zm0 0V9.05z'/%3E%3C/svg%3E");
   background-color: currentColor;
   -webkit-mask-image: var(--svg);
   mask-image: var(--svg);
