--- a/Japan_estate/Japan_estate/src/main/resources/static/css/standard.css
+++ b/Japan_estate/Japan_estate/src/main/resources/static/css/standard.css
@@ -28,3 +28,9 @@ a{
     font-size: 11px;
     align-self: flex-start;
 }
+
+.label{
+    font-size: 16px;
+    font-weight: 600;
+    align-self: flex-start;
+}
