added rent section

--- a/Japan_estate/Japan_estate/src/main/resources/templates/houseDetails.html
+++ b/Japan_estate/Japan_estate/src/main/resources/templates/houseDetails.html
@@ -24,13 +24,10 @@
     </div>
     <nav class="center_header">
         <div class="navbar_back" style="border-top-left-radius: 10px; border-bottom-left-radius: 10px;">
-            <a th:href="@{/}" class="header_button"><span class="ph--magnifying-glass"></span>Lente</a>
-        </div>
-        <div class="navbar_back" style="border-left: solid; border-right: solid; border-width: 1px; border-color: #c0f2c0;">
-            <a th:href="@{/}" class="header_button">Prova</a>
+            <a th:href="@{/}" class="header_button">Buy</a>
         </div>
         <div class="navbar_back" style="border-top-right-radius: 10px; border-bottom-right-radius: 10px;">
-            <a th:href="@{/}" class="header_button">Lorem ipsum</a>
+            <a th:href="@{/rent_catalog}" class="header_button">Rent</a>
         </div>
     </nav>
     <div class="right_header">
