--- a/Japan_estate/Japan_estate/src/main/resources/static/css/layout.css
+++ b/Japan_estate/Japan_estate/src/main/resources/static/css/layout.css
@@ -82,6 +82,7 @@
 .logout_button{
     display: flex;
     align-items: center;
+    justify-content: center;
     gap: 5px;
 }
 
@@ -111,6 +112,7 @@
   background-color: #e0f8e0;
   padding: 20px;
   border-radius: 15px;
+  width: 100px;
 }
 
 .footer{
